2007-12-02  Ray Strode  <halfline@gnome.org>

	Plug a few leaks found and fixed by Matthias Clasen 
	(bug 475970)

	* gconf/gconf-database.c (gconf_database_notify_listeners):
	Clean up list of dead listeners

	* backends/xml-cache.c (cache_sync): clean up temporary list
	of syncs when we're done with it.

	* backends/markup-tree.c (markup_dir_free): free markup dir's
	list of entries before freeing the markup dir

2007-11-22  Kjartan Maraas  <kmaraas@gnome.org>

	* gconf/gconf-internals.c (gconf_key_key): Add check
	for NULL. Patch from Kimmo Hämäläinen. Bug #492342.

2007-11-08  Brian Cameron  <brian.cameron@sun.com>

	* gconf/gconfd.c: Remove calls to gconf_log from signal_handler
	  function since it is not safe to print debug messages in
	  non-reentrant signal handler functions.  This fixes problems we
	  were seeing on Solaris where GConf would hang on exit.  Reviewed
	  by Havoc Pennington and Ray Strode.  Refer to bug #466745.

2007-10-22  Owen Taylor  <otaylor@redhat.com>

	* gconf/Makefile.am (install-data-local): If there is an existing
	path configuration file, don't overwrite it, to make it possible,
	for example, to have a jhbuild that properly deals with
	system-installed schemas. (#489193)

2007-10-23  Lucas Rocha  <lucasr@gnome.org>

	* gconf/gconf-sanity-check.c (main): fix regression that requires a
	defined default DISPLAY in order to run sanity check program when it
	shouldn't. 

2007-10-15  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Post release bump.

============================ 2.20.1 ==========================

2007-10-02  Kjartan Maraas  <kmaraas@gnome.org>

	* examples/Makefile.am: Dist basic-gconf-app.schemas too.

2007-10-02  Kjartan Maraas  <kmaraas@gnome.org>

	* doc/gconf/tmpl/gconf-client.sgml: Note that the dir passed
	to gconf_client_add_dir() must not end with a slash. (Stefan Kost)
	Closes bug #301298.

============================= 2.20.0 ==========================

2007-09-19  Kjartan Maraas  <kmaraas@gnome.org>
