@@ -1,3 +1,14 @@
+2008-01-08  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* gconf/gconf-backend.c: (gconf_backend_verify_vtable):
+	* gconf/gconf-database.c: (gconf_database_add_listener):
+	* gconf/gconfd.c: (logfile_save), (restore_client):
+	* gconf/gconftool.c: (hash_install_foreach):
+	String review by Clytie Siddall. Closes bug #315212
+
+	configure.in: Bump version to 2.21.1 because of the string changes
+	above.
+
 2007-12-02  Ray Strode  <halfline@gnome.org>
 
 	Plug a few leaks found and fixed by Matthias Clasen 
